# mortgage-calculator

./: README.md  pyproject.toml  requirements.txt
src/jdmortgagecalculator/: __init__.py  mortgage_calculator.py
test/: test_mortgage_calculator.py
