[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jdmortgagecalculator"
version = "0.0.1"
authors = [
  { name="Jack Dyer", email="jack.dyer387@gmail.com" },
]
description = "Mortgage Calculator"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jackLDyer/mortgage-calculator"
Issues = "https://github.com/jackLDyer/mortgage-calculator/issues"